--- a/ipynb/test.ipynb
+++ b/ipynb/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TimeLimit<SuperMarioBrosEnv<nesgym/SuperMarioBros-v0>>>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env = gym.make('nesgym/SuperMarioBros-v0')\n",
     "env"
@@ -36,11 +47,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQAAAADgCAIAAABjIy8HAAALq0lEQVR4nO2dL1ckPRaHw56SiBb7\nEV6BQIxAtBiBGIFogRyBGIlogUCsWNFixQoEAoFEtEAiWiBGjHhFC8QIBIKPsKIFssSKNOlMKlVd\nqf+p+zyHw6lO3S5Syf0l9ybVzcHFXaoApPKPvisA0CcIAESDAEA0Sd8VANixnNdyyAoJLQKAobCc\nJ+rqfzWvEKqBA1aBYAho709vJnZhcr1RSplC/dLGc+r2n0EuzQwAw8Lx8vRmYkrs4+JTAX+uwnu8\nPFwqpdSP+6KX3hLD3lNOubEXRUE7e9tnbzs7zdhgI5fsx+K/UuDW1TzevUj9S9g8XKof9+4dmoZ+\nuNwaGOzOMKfsZipQlHMp4RS3T2i7mS6o08jefiwo13gDHl3o9fiCU2Vofhk0z/tV/gAAFeigGbvv\nr+R6Y36MEnR4k+f9eadKMoh9ACQRim6x0HaLsZ0LgvvKcb9NwyGQjnPyoqAs2dwA2iCWdrZXgewE\n1yk0ru+1D6L5VSBvE+cluEYqBPShZEeZMsZB7ZwXprdBmqZJkiTK3QfwurUu9JwKXANVQ1gGzfaN\n3a+mD0wObb9RLCansof24vbJ04D3La3OGN7+VZ8aqHPlCptabISBaJpfBtXkrS53XB7KQ/JVKZVc\nrkuOC23XpwKhcUuXcY79F22K93mC9g1CaXIGcGIY+wZ6KQ+uf/LVHJfRQNv1qUCo8PpNjrO7eGU2\n6ZqtamPLoNlQMrtU12V5g2Rj1n7rU0Coc/SYRw1kpuo/CR4+9tpujJl3qyFENexxxE7o9y6XN94F\nCKAU8Xr/MCl4BMaU77VvhMZCoOx0n/f4QzflzZLd3eu3PkHoRWT7p0cKhnnbRv35PFJ7NLwMGvUq\n0HKepPdTpVRyuV7PDu/ONubi2QS3g/qEEhrq9BUalVntKTMbNAL7AH+gP5Jnez+MGwQQN/aHaOnK\nCpAER8xynqTpzumTJPgTsYAAokQP/Lb3q89nadBAEIP4PAAEoQd+x/sdgy7rEzW01KjQkwBTQXmY\nAUbC6a/tgZ4Z0jRlHigDAogMO/E9/bXz+1+nu2MoD4NETDje/+v0j7POSygDAogAE8zYie9ed7cz\ngQrfGSgEBDB0nMX+ylcgLfaCAAZNTe83i0INVmlkkAQPmvq+61yBpSEHngUaKN693pqwRZCF8WCI\n1I/7vRALZSEEAtEggCFycVf3K6LyIP5xQAADxdZAmS3eMjZ4fxYEMFyMBuzHHLyOnt0V9sIDQllY\nBRo6JiG2Xd+4u7dQFUqCecCG8SAabKd35gE9ReSJwQHvtyEEGjo6ENLokl+nO/82x7bHF4z9LeXW\n8UIIFBPe/YGChx3MKe339HUWxoOYMGmx8Xgd0DuFyvJ4XL8YZoAoMYs5dvfxFSkVQAAgGpJgEA0C\nANEgABANAgDRIAAQDQIA0SAAEA0CANEgABANAgDRIAAQDQIA0SAAEA0CANEgABANAgDRIAAQDQIA\n0SAAEA0CANEgABANAgDRIAAQDd8MB38wf56UtLw727RYj65AALBj/jw5mR2XNF5ejuFr1gmBwCW5\nXNc0iAhmAHBJ76f64GX1apebycEYjABmAPCjvX+6+tA/KqOHcYAAYA/p/dQM+WMKfjQIAESDAMDP\nyexYRz5qpMGPhiQYctGRj0kG+q5OKyAAKMuYFn8MhECwBzsWGh8IAPbwsnpdzw5HOfwrBAAlGd8C\nqAYBgIvj69kQaExiIAkGl2y045SMKRxCALBjuvpQq/GM7mXg/wSDaMgBQDQIAESDAEA0CABEgwBA\nNAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0\nCABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDQI\nAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANEnfFeia+fOkpOXd2abFelTi4WgVZP/j\nbRZ0vwO8fpB9BQ4u7tK2/8ZwmD9PTmbHJY2Ty/XQGsfrbdPVx3p2mFcedL8F1+nl+h20v8QQKLlc\n1zSIi7bvN+r2FBcCKaXS+6k+eFm92uVmMDMGQ2O6+ggq15S/32Fev1UkCkCje8s0/Xp2+LJ6LT+h\n94IJFYrDEu97y9zv0K5/5/1LjSIxBHJI76dmiBryZN0Ubd9vXO2JAEA0ckOgk9mxGZ+c4HWw2LFy\nmXjaDifK3O/Qrn9x5jVpErkCUJ/JmRO8DpnQZUSnZO/9Dvz6bSBaAA6DXfxpibbvN4r2JAdQJ7Pj\nKIb/pmj7fuNqT2YA9bJ6DdrR7JFG1tEL7jeK6zcLAtiSXK6HP2XXWad38N7v0K7PPkArOIvT2Sl7\n+KvXQbR9v1G3p8QZIDsyOSXDnwqCaPt+o25PWU+DLudhgh9a44TWP3Y6aH9ZAgBwkJgDABgQAIgG\nAYBoEACIBgGAaBAAiAYBgGgQAIgGAYBoEACIBgGAaBAAiAYBgGgQAIgGAYBoEACIBgGAaBAAiAYB\ngGgQAIgGAYBoEACIBgGAaBAAiAYBgGgQAIgGAYBoEACIRta3Ddck++XMfLVw7CCA/ez8/jFz6vv2\nFEqIFARQxNb1M36/4/OUVgIyiI66ArCjgjLd37Z9gyznSZHr23zfKmH5PUEDQfTYv5pa/yBjOU8W\nvyfm5eLLpvhqbds3SJj3ax63L+1K/vvujyHmP/Oy9Z8/T8zx3dmm5Lviosf+NVQUgBauXXtN3j20\nbd8sAd6vMgJQOw043m9TrATb+zUj00C//WtTJQRyhOs1sG+jbftmCfN+L4/bWOjpbFtwfTRVSt28\nra+Ppj/Sv4vfnfV+XTgaDfTbvw4N7wMsfk/07ZX8d25t24cSFvl8zz/7qI7fE+33+rfhIfn6kHzN\ne5/X+/eeGg1t92+WxgSweNtsD35P1Oed9GhfgYpj/6P128fN2/a/5F4fTc2xVwPz58l09eH9t+m6\nfMQa6KB/vQQLwJ6/Fm+bXb2PJua4S/umqBX55LxRxzxmBtDef/O2vnlbZwMh7dzr2WH688nRwHT1\nkf580v9CPXYN9NW/eYSJzK390cQ+67zswL4pGoj7M/xrqpRS15tdiVHC3jRAKeWdB2Knr/4toNQq\nkJmMinOX7jGLBnXSpja8X/PftVJKnT8rkw2//uWvpD2un1wtk2/n6c+nl9uL7EtNXAlxZf9ppH+L\n2T8D7M3Ze0fXcPGlShu17f1Kqaczdf68PTh+T/I0YJP+fCp4GRf1/adO/+5ljwAG7v26XSrXsD3v\nt9He/9fV9Px2rZS6vvpaHALZI332ZVzU9J+a/VuGPQIYsvdrnBqWnyu78X71OQO8325nhPfbtZq7\nNndnGycKcgwijX/q+0/l/i1Jbg6Qt1c3ZBZfNovfkzK7iR14/9tiG/qb3NdooHgb+OFo5S3/8TZr\nsn4t04b/lO/f8vhngIFHPnmUrHM3Y//RYqcBZXn/0UKpSs/MaZeK4mG7lvynjWuKexy6s8hHfWrg\n/Xmt1E4JSu2elfBWb5nJepNv57ZBFBqIBf9G2MVduviy6bYmzVA8P3bp/Zqns+2PYbs69Oj5fJnB\n9nj7OBba85/Gn5Y7yFtiS76dr2eHdjZmlqWxL29/szo3x6fvpa5vPF5f3xEA/dWs/YHeYM+it9/t\nxYdsCfbYx27Pt0KAaBAAiGaPAEIfycIe+7jsi5ZBdcBk3pOXLWCPfbz2RQI4uVqmV7uXybdz+yX2\n2I/Afs9GWOiTWNhjH5c9STCIBgGAaA6UL3vw7ikUZBvYYx+pfZL+fNKb7XuTaPW5D4899qOxT15u\nL+y3mRN56QX22I/JPlGfqbF5ymrv44fYYz8a+90yaPGKUnYLDXvsx2S/Q383k7fcG1dhj3289on3\nnLHIPj+NPfZjsk8KZoqTq6V9tvh5a+yxj9GejTAQDQIA0fB5AOxF2/N5AOxF2/N5AOxF2/N5AOxF\n2/8f85E9oFjI4LcAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<PIL.Image.Image image mode=RGB size=256x224 at 0x10D3C1CC0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-95"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQAAAADgCAIAAABjIy8HAAALmElEQVR4nO2dLXcbuxaGlbMGBhjc\nn1BQEHCAgUFAQEGAgWFBQKCBgUHAARcUHFgQYBAYYBAYYBBQUFBgEFAQUJCfcIFB4IAL5MjKfFma\n79F+ntXVNdZsTzTSfqWtrbF9crWKFYBU/uq6AgBdggBANAgARBN1XQGAA+tFJYcssaBFANAX1otI\nLf9X8Qq+GjghCwR9QHt//H1kF0Y3O6WUKdQvbTJO3f7Hy6WZAaBfJLw8/j4yJfZx8SmPP1fiPZnc\nz5VS6vqu6GVmieHoqUS5sRdFQTtnts/Rdk40Y42N7NiPxX+lnFu7U/MMcD9X13fJOzQNfT/fGxjs\nzjCn7GYqUFTiUsIpbh/fdjNdUKWRM/uxoFyTGfDowoQYoptdQXTkSP1p0DzvV/kDAJSghWZsv7+i\nm535Z68H0iXqPezJPOVOL/YBkIQvusV8222I7Vzasx2pOQTScU5eFJQmvTaAJhhKOydGfZUT55ix\nv3oIVH8WKLOJ8xa4RioE9L6kRxkXY692zgvTmyCO4yiKIpWxD5B2blOSPOWZA1V9SIOm+8buV9MH\nZg1tv1EsZk1lD+3F7ZOngcy3NDpjZPavetdAlSuX2NRiIwxEU38aVJOXXW653Jf76FwpFc23juNC\n0/UpgW/c0macY/9Fm+J9Hq99A1/qnAESMYx9A52Ue9c/OjfHLhpouj4l8BVet4vj9C6eyyZdvVWt\nLQ2aDiXTqbo2y2skHbN2W58CfJ2jw3VUT2aq7hfB/cfO7Q5x5d1oCFEOexyxF/RH0+W1dwECcGK4\n3t9PCh6BMeVH7WuhthAoPd3nPf7QTnm9pHf3uq2PFzqJbP/rkIJh3rZRH59Hao6a06CDzgKtF1F8\nN1FKRfPtdnq6utyZi6cXuC3UxxffUKer0Mgl2+MyG9QC+wAf0B/Js70fwgYBDAb787L0Wl2wCB4G\n60UUxwenjyLvD79CJgig7+iB3/Z+9f7YDBqoTi8+DwB56IE/4f0JgzbrEx4031DRkwBTQUWYAYbH\nxc/9gZ4Z4jhmHigNAugv9sL34ufB739eHI6hIowcPSXh/T8vPpxNvITSIIB+YYIZe+F71N3tlUCJ\nrweUDALoEYlkf+krsCx2BwH0hYreb5JCNVZJAiyC+0J1301cgdSQCzwL1D2Ze70VYYvAEQaJjqke\n92dCLOQIIRCIBgF0zNWq6rdB5UH84wIC6B5bAy5bvC42eL8jCKAXGA3YjzlkOnp6VzgTHhByhCxQ\njzALYtv1jbtnFqpCSTAPHIVBoo/YTp+YB/QUkSeGBHj/UQiBeoQOhDS65OfFwb/Nse3xBWN/Q2vr\nwCAE6imZ+wMFDzuYU9rv6VZHGCR6ilkWG4/XAX2iUFkej+uXgBmg75hkjt1TfEVKXSAAEA2LYBAN\nAgDRIAAQDQIA0SAAEA0CANEgABANAgDRIAAQDQIA0SAAEA0CANEgABANAgDRIAAQDQIA0SAAEA0C\nANEgABANAgDRIAAQDQIA0SAAEA3fDCeXxdPI0XJ1uWuwHp2CAISyeBqNp2eOxut5sF+zTggkmmi+\nrWgwdJgBRBPfTfTB8+bFLjeTgzEIFWYA2Hv/ZPOm/6mUHgIGAcCB+G5ihvzggx8NAgDRIABQ4+mZ\njnyUpOBHwyIYlHpf7JrFQNfVaQ8EABkEn/wxEALBATsWEgICgAPPm5ft9FTO8K8QAKQRkgDVIADR\nJHw9HQIFLwYWwaJJRzuJkuDDIQQglMnmTW0CH91d4HeCQTSsAUA0CABEgwBANAgARIMAQDQIAESD\nAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANAgARIMA\nQDQIAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDQIAESDAEA0CABEgwBA\nNAgARIMAQDQIAESDAEA0CABEgwBANAgARIMAQDRR1xVokMXTyNFydblrsB6luP+88bK//jP1ut8e\nXt/Lvi5OrlZxJ3+4aRZPo/H0zNE4mm/71g6Z3jbZvG2np3nlXvdbcJ1Ort9V+wceAkXzbUWDYdH0\n/YbXniGHQEqp+G6iD543L3a5GcyMQd+YbN68yjXu99vP67dP4ALQ6N4yTb+dnj5vXtwn9E4woUJx\nWJL5Xpf77dv1V5l/qXkCD4ESxHcTM0QNbrIuQdP3G0B7yhIAQAIRIdB4embGp0Tw2lvsWNklnrbD\nCZf77dv1ry4zTRpHhADU++IsEbz2Gd80YqLk6P32/PqtIUUACXqb/GmIpu93uO0paw0wnp4NYviv\ni6bvN4D2lDUDPG9evHY0O6SWPHrB/Q7i+i0gSwCaaL7t/5RdJU+fIPN++3Z99gEaIZGcTk/ZA81e\n59H0/YbXnoHPAOmRKVHS/6nAi6bvN7z2DPZp0PXCT9t9awff+g+drto/WAEAuBD4GgCgGAQAokEA\nIBoEAKJBACAaBACiQQAgGgQAokEAIBoEAKJBACAaBACiQQAgGgQAokEAIBoEAKJBACAaBACiQQAg\nGgQAokEAIBoEAKJBACAaBACiQQAgGgQAokEAIBoEAKKR9RXE7qS/nJlvEQ4SBPCBg98/pE593Z9C\nCSGBAPbsXT/l9wfeT2klIIMw8BCAHRW4dH/T9jWyXkRFrm/zda+E9dcIDXjRYf8W4PoDGetF9O33\nyLz89veu+I1N29eIn/drHvYvXSr539Wh4/9dHOwXTyNzvLrcudVgqHTYv8UcF4AWrl17Td49NG1f\nLx7er1ICUEUauI/Or+Nftvdr/l3E99G5/o11m1A10G3/HuVIGlQLN11726BN+3rx8/5MHjJqeB+d\n30fnSqmz1+jTcvJ4qT4tJ+bg7DVSSo2nZ4mf17UnhGDotn9dKL8P8O33SN+e4z00be+LX+TzNf9s\nlgaUUt//5P5gaN6pIDWQR9P960gZAXz7s9sf/B6p9zvp0L4EJcf+B+v/j+V5Nfz+Z3vzef/LoTef\nJwWqmGzeJps3CRpooX/dKRKAvXD59md3qPfnkTlu074uKkU+eW+0NHAd/7qOf5kzxult74/mW3sZ\nMNm8xT8e9S+nB6OBrvrXi1zlJWv/eWSfTbxswb4uaoj783j4kBt9+RSfvUZ61Deur1/eTB//uZ0l\nfmM9MLrqX1+SWSAzjBUsXDrBJA3Wi/IJ+Aa932DlhbQAEue1AKIvs/jH4/PtlVJqvFzbLzUDTQqV\n9p9a+rcEGTmZ1v52CfZZhb/LtFEb3q8O84BOgL4+bT8tDxp4vd3OlHp9msU/Hu03JV4OlOr+U6V/\ny3EQQM+9X7dL6Rq25P2aB3W2jR4v1exJqY+h/0wppdTjpVKb2cXrqS60B/7hUtF/KvZvaQ4C6LP3\naxI1dJ8rW/V+C62B2ZN6vFRK7fWgj5VS4+XaNh56/FPdf0r3bxX+0n+p8/0IL7xSyF15v+HTcqJl\nYMdCacbL9epyp/+1VbV6qN1/2twiiHoe+eThWOfOvV8p9Xq7TRyEREP+05pPhvyJsA69/5+isV4p\npf65TZZEX2bDmofD4ORqFQ91Eih8mqoPY/+Br0q3c6LYJH+iLzN90Ifnw3xpahJo5Wm5k/jHY/Rl\ntp2e2msyk5/OfA/2pe2No2u0AEyh0UNv6x+e/cl2eqr34e0sRLrEBnvsg7EPeQ0AcBQEAKI5CMD3\n2SzssQ/Afp+X0OGReY9+LrcA7LEPw34vgPFyHS+t0i8z+2Ua7LEPw/6QmfZ9JAt77AOwZxEMokEA\nIJoTpVR6j6Bg9ZC5p4A99gO1z336yt6lP7roxh77gdpHBVvKz7dXiYdVVNZ0gT32w7U/8vytvlb6\noUXssQ/DPkMA6S204owS9tgP2D7z+wi209PMuGo7PcUe+5DsI3OUfn4681rYYx+SfaTPjZdre14o\nft4ae+yDsWcjDESDAEA0fB4Ae9H2fB4Ae9H2fB4Ae9H2fB4Ae9H2/weXZC+wbH9gvwAAAABJRU5E\nrkJggg==\n",
+      "text/plain": [
+       "<PIL.Image.Image image mode=RGB size=256x224 at 0x10D3C1CC0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "done = True\n",
     "for step in range(5000):\n",
@@ -60,16 +101,55 @@
     "    if reward < -50:\n",
     "        break\n",
     "    # state, reward, done, info = env.step(env.action_space.sample())\n",
-    "    sleep(0.5)\n",
+    "#     sleep(0.5)\n",
     "\n",
     "# env.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQAAAADgCAIAAABjIy8HAAAKhElEQVR4nO3drXvbyBbH8ZM+AgUB\nBvsnLDC4oKDAMKCgICAwICCwwCAgYEGBwQUXGAQEFAYYGBYEFCwINCgoNNg/4QKDgAKBBeOMx3oZ\n610ane/n6bPryMeuKp+fNCPJ7dnNYyyAVu/6XgGgTwQAqhEAqBb1vQLAwWpeqyErTGgJAIZiNY/k\n7v8136FsBs44C4QhMN0fLyfuwuh+Zx/Hy4n7o12YrHz4o1RLcwTAsKS7XJxGTyy0xZnxKPTbVXhN\npqcvIiK333w/Zi6xTj6VWG7rVfFs58ztc3I7JzZjgxu54Od48ncxzZ3OQLWOT75J/bdwPX2R22/J\nP6Hd0E9f9gWW+2HYp9zN5ElU4q2U82+fstvNfgR1NnLm5+hZbiRGNSd37aa+chiaPw2a1/2SvwNA\nBR1sxu4/r+h+Z3/ZJMTLiXmcORBKFJc1iOsARKIss8XKbrcQt7PNg6R285Wb/uj967+Fy4xz8kZB\naem5AdoQynZ2e9ozqjHjInfHX3kI1PxZoMxNnDfBtVFhQF9Wei9TpLjUds4bprchjuMoiiLJvQ7g\ntrh9nOz7kudAZQinQdOfjfu52s/AzqHdF6pl51Turt2/ffIykPmSVo8YmZ+vvGWgzjtXuKjFhTCo\n1vxpUCPv7HLHy8ua/5iIyOz5teB+oe31qaDsuKXLcY77O7pOXudp78jf5BEgMYZxj6e9LC/LdL9R\nJANtr08FZYPX7+Q4fRXPc4GvpTVs7DRoOqPpU3VdLm9Qesza7/p4lO2SHudRBdu67Z1I/5Pg4XPP\n7YY48y5760EH3P2IO6E/ebpcml55AlBIuN0/TJ5bYOzyk/WNaGwIlD7c593+0M3yZqWv7vW7PqWY\nk8jurx55dvNujXS13Ro+DRr0WaDVPNpcnovI7Pl1c3n++Hln3zw9we1gfcoqO9Tpa2jk2btnronn\n7FB9XAc4Yr6S53Y/xo0AQAv3C8e27ZkEQ4XVPIrjw74+ivbfHiYAGDmz43e7X97uO7p5jAkAxiyx\n408jAFDKHAQG8Y0woEsXL/sHcRwTAIyWO/65eDn0/cvF4TFDIIxTovtfLo6etT8SAIyKPdnvzn0T\n3e8iABiPk+d80pgDYCQqdL8QAIxGhe4XAoARWM2jyv+wAHMAhK3ayMfiCADVCADCdvNY66/TGvMQ\nKPP+b4yPyYAZCKWveaW5NaM9ApihoVXzX1/DwNnjgHubg33gSiRkhN8Iy7z/W5zvQGCs7ITYbX3b\n7pkLx7ZfPHlOoMI/JIjguE2fOA6YQ4TGm+HM/d/2q0B9rw6a506IzX7QJMG0u02FurtB7bDPbBQy\nMGKHb7tHh7HAYcDztnCck+Ai939DCXM0cM+Q7r8EnFjYx7q1ouD939Bj//c+vLW7+TGxMPizQJn3\nfxdhR0FMizUL+whQ8z4Q+w5MCdQKOAA1u9+eFGpwlRCcgCfB9Xs38Q5cLVYoyDlA3rXeOrhEoFN4\n+7z64/5MjIV0CngIBNQXXgBq3v/twfhHofACIMcZKHKJt0gN3a9TkAGQGvd/5+E7AzoFeRbIqnD/\nt3gjwXFAm5Hs84rf/y3e+4Lofm1CHQIZ9uY+OyV4uTi67ds8djves+9vaW6NIQt7COTKvD7gudnB\nPmX6fjTbAaWMZ59np8W24+3933J8nct2PK2P8RwBLHsyx/2j8VekINMIAwAUF/YkGKiJAEA1AgDV\nCABUIwBQjQBANQIA1QgAVCMAUI0AQDUCANUIAFQjAFCNAEA1AgDVCABUIwBQjQBANQIA1QgAVCMA\nUI0AQDUCANUIAFQjAFCNAEA1AgDVCABUIwBQjQBANQIA1QgAVCMAUI0AQDUCANUIAFQjAFCNAEA1\nAgDVCABUIwBQjQBANQIA1QgAVCMAUI0AQDUCANUIAFQjAFCNAEA1AgDVCABUIwBQjQBANQIA1QgA\nVCMAUI0AQDUCANUIAFQjAFCNAEA1AgDVCABUIwBQjQBANQIA1QgAVCMAUI0AQDUCANWivlcAwzX/\nMSlY+fh51+J6VPI0fS5SRgCQrXj3i8hqHt08xq2tSxU/H27SC2fPr5vLc3cJQyD4zJ5faxYMHEcA\n+CT2lxUK+pKXzMRyAoCibOsMtulddiXTwx53OUMglLC5PHcbq9+VaQQBgGoMgVBIcPt7d4U98wEC\ngELcYXQQYfCM+90lBABVBDEPLoI5AMoJYvdfHEcAlBPKvp/rAGhL3pn1QeE6ABqQ3o8mloQ+IuII\nAJ/0vjOxZPiHAj8CgGyh79oLXgc4G9pdrECXmANANQIA1QgAVCMAUI0AQDUCANUIAFQjAFCNAEA1\nAgDVCABUIwBQjQBANQIA1QgAVCMAUI0AQDUCANUIAFQjAFCNAEA1AgDVCABUIwBQjQBANQIA1QgA\nVCMAUI2/HRqtWM2TrTXMv4aZAKBJh75fp5663j81qCQQADRj3/qpvj94e8okYSAxIADdcUcFRT7+\ntusbtJpHvtZ3Xe+TsLqOhpAB/oGMdn19PNrFrNcT82DxYeff8qt5tPg1sT82Xt+gct1vrPc/9t5+\nBKBFie53rdeTvB41O3K3m42m6ptVovslFQDpPwMMgVr0/fP+wf10JiLL7eZ+OvvvbOvWrOZHI4HE\njjytZn2zynV/pnXPYyGuA7TlP/9Epu/Nf62vm+nXzVREFr8mpn3TZwwztV1fVrmRz3X+s+uMc6ad\nIQCtW2435sH9dGYf2wzIW6d63mGx3e0ftFNfQcV9/9r57/HyvjJAAFpkxjz2CGC6f7ndLLebaLJJ\n17vjmcV2d+jj6cQ+rlPflFojn7wX9pQBJsFtMd1p9vQJiWmAiCw+7MSZyC62u8V04nnzCvVNfdBV\nut+Mf4q8qvM5MQFomNmN/e/usOTqh8jbhPj37aSHdRIRJwN1psUNzHpP6jYDDIGatJpH8bdZ/G2W\nfsrE4P3T7v3TzsyDMw8ObaszLe6i+6XrsRABaIw7Ir+fztyd/Z93MxG5+rGPgZ0Kd8meFKr28o66\n3+gwAwSgMW5vmVG+7fh/Hg4d//t28vt2stxu0jOBLtdQsm7YzNNp9xtdZYA5QAMyr8VeX+/y6nuf\nD4jI4sNu8Sv3arSrh+632p8PvOvxGsQ4mHFF8e4fiIJjoT67X7o4Drzr9zrcKL1/2tmbIERkvZ6Y\nX72tUFU9d7/Rcn+eDee+vHAlJpfvn3bmQb+DnJP8459BdL/VWn+exX9/F5GfDzci8vFulVkUfbra\nXJ67z1Lvr18+X5kH95ffh7A+1OfVR6Z09vwa//3dPM708W7lPku9v/6vZzH1eS8Z+Prrqec0KFQj\nAFCtRABmz6+l3pp66odfH5n/bS7P/dV2qmB+pJ76cdRH5ixQ9OkqvvO94OPdyi2gnvpx1EeemXJC\n8UrqqQ+lnkkwVCMAUO0QgOjTVeY8Ou+aAvXUj6D+cJuRnQ1LgUk09dSPo/7oPrufDzfuy+wb5U0v\nqKc+9PrkjabmOfOyxCvzfg/qqQ+3PpKsS2j+M0rUUz+mehGRzeV55jhpc3lu00M99eOrj9zvA2S+\nl31l+n5r6qkPvZ7vA1Cvup4LYVCNAEA1vg9Avep6vg9Avep6vg9Avep6vg9Aver6fwGST683ygR4\n1wAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<PIL.Image.Image image mode=RGB size=256x224 at 0x10976C550>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQAAAADgCAIAAABjIy8HAAAKiUlEQVR4nO3dLXvbSBfG8ZO9BAoM\nDPYjPMCwoMBgQUBBgUFgQEBggUFAwIIFBgsDAgIKAwwCAwICCgIeYFBQaLAfYYFBQIHAgnHGE71Z\nL6OX0fn/rl67iXziqM65NTOSnJ5c3MUCaPVb3zsA9IkAQDUCANWivncAOFgvGzVkjQUtAcBQrJeR\nXP3b8BmqZoApEAbBdH98M3X/uAWJT7Mfuvq36hjCCIBhia536Y2lur/et2vyxa77ryIil9+KPs3c\nYh19KLHd1qtS8Dpnvj5HX+fEy+jxRS75czz6XeKbaXS9y2z0godK8jwFMn+3xN+w+Idk/sj7kNhX\nJPFoZj3k2OtT9XXz8iJn/hwLPjYS8x/T4pnPX/BQef7XAAXdT+N61MHL2P3PK7re2T9uBszH6SN9\nwUNlv2O9L/OLSFSVOdKW/Kqw2GN8+nhf8FCF56+7Y9kuv8n91/1/XXkvfXptgDaE8jq7B/KCnvYy\n+TH8T4EyX2J3DppZHOLBqV+VWrne65y5Sm5JHMdy+7s7BUoUuFvyhgK5/b3qdYD+p0B2uDBDh7z/\nIblru/uvyYWdWnZN5R7ai1+f9OtsZH5JqyNG5s9XROI4jqKurwSfcDs0NPM8AuQdOfraXtXyeSoi\n86fXkseFtvenhqrzli7nOe53dNW7juGFzxEgMYdxx9Netldlut8ok4G296eGqsHrd3GcvkCUvkjX\n9mvobRGcnkqmT9V1ud2j9Jy13/0pULVRelxHVepss7xJLHK86H8RPHzuud0QV95tzyJqcI8j7oL+\n6K6aGo/7TwBKCbf7h8md6rgZsDobNr1NgTLvP+lxu1/pq3v97k8l9iJM3tWYLpWZxiTWBq2GwfNp\n0KDPAq2X0WYxEZH50+tmMbn7srNPnl7gdrA/VVWd6vQ1Nco82yP5R428ei+4DvCOeTuF2/0YNwKA\nMXPfIJbZ6iyCMVrrZRTHh6aPoox3DBMAjJA58LvdL2/3GiUywJviMTbmwJ/o/kSB/ZgRAIqYQcAd\nChgBoMLpy/4DMzLEcWzGAQKAUXEXvqcvh75/OT187GIKhPFIdP/L6btHE58aBADBs4tad+Gb2e4u\nsxIgAAhb4mR/VawBELCG3R/HMQFAwJp0v0EAEKT1Mmr4jwkYrAEQnoYzHxcjAFQjAAjPxV3TX6Fl\njW0KdPT+b4yDyYCZCKWveaXl1YxqBLC3ARpeFkkYLDsOuLc5ZN7vUJCQkbwjLPP+b8l5DwTGxC6I\n3da37Z65UZxIjOEYefScQI1/PBDBcZs+MQ6YISIzDGMIQIH0/d8YGXdBbI6DprlNu9tGd6dJ7lAw\n2gDYMc7e/00Gxsr+WO2yWNxj/NvG9DIgiqLgF8FV7//GiJnRwD1Dao56iY1m+/6hznfSpxr3f2Pc\nzGhg2918mtgozqAR5FmgzPu/y7CzIJbFMMIbAZrfB2KegSUBJLgANL//210nAYEtgpv3buIZuFqs\nXDBrgLxrvU1wiQBhHP883v/tYi6EwKZAgF9hBMDj/d8JzH+UCyMA8j4DZS7xlqmh+xFMAMTT/d8u\n3jOAYM4CWQ3v/05jHNAs4ONfvfu/0+h+zUKaAhn25j67JHg5fXfbt/nY7fiCYz+/HFK58KZArszr\nAwU3O9iHTN8H/XeHF2Ef/+yy2Ha8vf9b3l/nsh1P68MV9ghg2ZM57l+HX5GCo0YSAKCe8BbBgEcE\nAKoRAKhGAKAaAYBqBACqEQCoRgCgGgGAagQAqhEAqEYAoBoBgGoEAKoRAKhGAKAaAYBqBACqEQCo\nRgCgGgGAagQAqhEAqEYAoBoBgGoEAKoRAKhGAKAaAYBqBACqEQCoRgCgGgGAagQAqhEAqEYAoBoB\ngGoEAKoRAKhGAKAaAYBqBACqEQCoRgCgGgGAagQAqhEAqEYAoBoBgGoEAKoRAKhGAKAaAYBqBACq\nEQCoRgCgGgGAagQAqhEAqEYAoBoBgGoEAKoRAKhGAKAaAYBqBACqEQCoRgCgGgGAagQAqhEAqBb1\nvQMYluXztGTl3Zddi/tRy/3sqVL95XZBAHBQvvtFZL2MLu7i1valjh+3F+mN86fXzWKSt50pEJLm\nT68NCwLCCICkzONlpYK+5CWzILEEAEVs6wy26V12J4unPe4WpkA4YrOYuI3V7854RwCgGlMg5Aru\neO/ucJn1wGYxIQDI5U6XgwhDyXm/3S6MACgviHVwVawBcFwQh/96GAFwXCjHfq4DoC15M+lB4ToA\nPEgfLxNbxjQjYgRAUvrYmdgy/KGgPAKAg9AP7VWvA4jIydDuaAW6xBoAqhEAqEYAoBoBgGoEAKoR\nAKhGAKAaAYBqBACqEQCoRgCgGgGAagQAqhEAqEYAoBoBgGoEAKoRAKhGAKAaAYBqBACqEQCoRgCg\nGgGAagQAqhEAqEYAoBoBgGr8dmh4s14m22n4v3qZAKCpQ98/pB463z802CQQANS3b/1U3x+8PWSS\nMMAYEIB2ubOCMj/+tus9Wi+jotZ3ne+TsD6PhpYB/oGMFq2X0Xb2bsvfy6JXe72MVj+n9tPVx13x\nT6dqvUfVut942H86qJYjAK0wB+ZE97sSSTD1bjcbeT1dtd6vCt0vqQDIsDLAFMg/e2B+vN+ZLdez\nuYjcbDfXs/ll/P/1MrrIqi94Qrdjqtb7Va37Mz0MaC7EdYC2fLjfmb43/7Xuoz/ib/P0GcNMq59T\n0+4t1VdVbeZznv/oQ8Y5014QgNbdbDfmg+vZ3H58NAOr7W7/wc+pvHW2x/oaah77H5z/vt8+hAwQ\nAM/c+YmZ89gRwHT/zXZzs938Pd+m61fb3aGPZ1P7cd7zl6n3pdHMJ+8LB5CB/iM4Jm53/jmX1Wwq\nm8OjNgm53T+bus+W+LRGvS8e5v15+l4PcBbIA3sYs9354W35KyJnzyIij19ERH5dTrvcMXtSqMmy\nuMXut/o7L8QI0FTinMxfm5mI3LhHfhEROXuWxy/7YKSHgg72cPWxTga66H7pcxxgDdBI3hnJ69nc\nPdj/72ouImfP+9HALoXbZk8K1fvyjrrf6Gk9QAAayestc2i3Hf/P7aHjf11Of11O3XVwl3tYvsk6\n7X6jjwywBqgp71qsdX6+y3uol/WAiKw+7lY/p2WuFvfQ/Va36wHWAHUcnVcUdH+PSs6F+ux+6Xo9\nwBTIvw/3O3OMNx4epuZPbztURc/db3Q4F2IKVFPBIGDPgXY/yTmqeP4ziO63OpkLncTfHzMfiD6f\nbRaTT1dru+XH7YWIuFuoz6u/eTozG68Xj0PYH+rz6iPzv0yfrtbuo/On1/j7I/Vl6k9lYja6BQHt\nv5561gBQjQBAtSMBmD+9Vno66qkPq77oZJOZMNmv2Swmxc9OPfXB1RcF4NPVOr46fBp9PnM/pZ76\nEdQfudxQsKamnvoR1LMIhmoEAKqdSNbqIfOaQsFqg3rqA62P4u+P0eezzC9LM/dNUE/9aOqjH7cX\n7pfZB/KWF9RTP6b6SN6WxvauOPcr874H9dSPo/5wGrT4jFL6Ehr11I+p/mCzmGTeI71ZTDLnVdRT\nH259lPd+AFORvn+aeurHVM/7AahXXc+FMKhGAKAa7wegXnU97wegXnU97wegXnU97wegXnX9f4n9\nxm63Eh7vAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<PIL.Image.Image image mode=RGB size=256x224 at 0x10D3C1D30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "done = True\n",
     "for step in range(1000):\n",
@@ -83,9 +163,6 @@
     "    display.display(done)\n",
     "    display.display(Image.fromarray(next_state))\n",
     "    state = next_state\n",
-    "\n",
-    "    if done:\n",
-    "        break\n",
     "        \n",
     "env.close()"
    ]
